27 Apr 2004 Sylvain Pion
- Remove trace of CGAL_MASK_FINITE_VALID in Borland_fixes.h.

18 Apr 2004 Sylvain Pion
- Added CGAL_CFG_IEEE_754_BUG.C for PGCC/VC++/Borland.

18 Apr 2004 Sylvain Pion
- Added CGAL_CFG_DENORMALS_COMPILE_BUG.C for PGCC.

8 Apr 2004 Sylvain Pion
- Kill "unused variable" warning with PGCC.

26 Feb 2004 Radu Ursu
- removed CGAL_VERSION and CGAL_VERSION_NR from config.h
- those will be created by the create_internal_release script

22 Feb 2004 Radu Ursu
- added configuration test for SunPro called:
    CGAL_CFG_MISSING_TEMPLATE_VECTOR_CONSTRUCTORS_BUG.C

17 Feb 2004 Sylvain Pion
- Remove CGAL_CFG_NO_PARTIAL_CLASS_TEMPLATE_SPECIALISATION

31/01/2004 Sylvain Pion
- Also do not define CGAL_USE_GEOMVIEW for __MINGW32__.

30/01/2004 Sylvain Pion
- Define CGAL_USE_GEOMVIEW except for windows.

2.94 19/01/2004
- Remove CGAL_CFG_EXPLICIT_SPECIALIZATION_MEMBER_DECLARATION_BUG.C

2.93 18/01/2004
- Remove CGAL_CFG_EARLY_INSTANTIATION_BUG.C
- Remove CGAL_CFG_USING_NAMESPACE_BUG.C
- Remove CGAL_CFG_RETURN_TYPE_BUG.C
- Remove CGAL_CFG_ENUM_BUG.C
- Remove CGAL_CFG_NESTED_CLASS_TEMPLATE_BUG.C
- Add CGAL_CFG_USING_BASE_MEMBER_BUG.C

2.92 18/01/2004
- Remove CGAL_NULL_TMPL_ARGS
- Remove CGAL_TYPENAME_MSVC_NULL

2.91 18/01/2004
- Remove CGAL_TEMPLATE_NULL

2.90 18/01/2004 (aka bloody sunday :)
- Remove obsolete CGAL_DEFINE_ITERATOR_TRAITS_POINTER_SPEC.
- Remove obsolete CGAL_LIMITED_ITERATOR_TRAITS_SUPPORT.

2.89 18/01/2004
- Remove obsolete CGAL_CFG_FUNCTION_OVERLOAD_BUG.

2.88 18/01/2004
- Remove obsolete CGAL_CFG_VC7_PRIVATE_TYPE_BUG and CGAL_VC7_BUG_PROTECTED.

2.87 18/01/2004
- Remove obsolete CGAL_CFG_MATCHING_BUG_2[.C] and CGAL_MSVC_DUMMY_ARGUMENT.

2.86 9/12/2003
- Simpler implementation of CGAL_WRAP().

2.85 4/12/2003
- CGAL_CFG_NO_TEMPLATE_FRIEND_DISTINCTION is now gone.

================================ CGAL 3.0 ================================

2.84 21/10/2003
- fix headers

2.83 17/10/2003