@@ -1,3 +1,6 @@
+6 May 2004 Laurent Rineau
+- Added CGAL_CFG_OUTOFLINE_TEMPLATE_MEMBER_DEFINITION_BUG_2.C
+
 27 Apr 2004 Sylvain Pion
 - Remove trace of CGAL_MASK_FINITE_VALID in Borland_fixes.h.
 
